@@ -1,3 +1,8 @@
+2012-06-22  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/Makefile.in:    [Bug 1844430]: cygwin make fails in 8.4.14-8.5b3
+	* unix/tcl.m4:        Sync with Tcl version.
+
 2012-06-10  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* library/*.tcl:      [Bug 3534137]: $tcl_platform(platform) !=
